# hexapod-locomotion-gazebo

./: .gitignore  README.md
Documentation/: Obs_vector.txt  TODO.txt  setup.txt  tests.txt
src/gazebo_listener/: CMakeLists.txt  listener.cc
src/gazebo_listener/launch/: gazebo_listener.launch
src/init_scripts/: client_launch.sh  killall.sh  launch_gazebo.sh  run.sh  server_launch.sh  test.sh
src/phantomx/: package.xml
src/phantomx/launch/: run_robot_gazebo.launch  run_robot_gazebo_test.launch
src/phantomx_controller/: CMakeLists.txt  package.xml
src/phantomx_controller/launch/: robot_controller.launch
src/phantomx_controller/src/: Makefile  gait_planning.cpp  gait_planning.h  inverse_kinematics.cpp  inverse_kinematics.h  main.cpp  phantomx.cpp  phantomx.h
src/phantomx_description/: CMakeLists.txt  package.xml
src/phantomx_description/meshes/: tibia_l_coll_rump.STL  tibia_l_coll_tip.STL
src/phantomx_description/urdf/: phantomx.sdf  phantomx.urdf  phantomx.xacro  phantomx_urdf.xacro
src/phantomx_gazebo/: CMakeLists.txt  package.xml
src/phantomx_gazebo/config/: phantomx_control.yaml
src/phantomx_gazebo/launch/: simulation.launch
src/phantomx_heightmap_plugin/: CMakeLists.txt  heightmaps.cc
src/phantomx_training/: CMakeLists.txt  package.xml
src/phantomx_training/launch/: terrain.launch
src/phantomx_training/scripts/: CMakeLists.txt  Trained Models' reference.txt  custom_network.py  custom_network_student.py  dagger.py  env.cpp  env.h  env_atc.py  joint_states.cpp  joint_states.h  logs.monitor.csv  main.py  main_test.py  model_sdf.py  physics_contact_forces.cpp  requirements.txt  server.cpp  statistic.pkl  student.py  student_network.py  tcn.py  teacher_training.py  terrain_generator.py
src/phantomx_training/scripts/Entrenados/: rl_model_vecnormalize_2595000_steps.pkl
src/phantomx_training/scripts/loguru/: joint_states.cpp  joint_states.h  physics_contact_forces.cpp  physics_contact_forces.h
src/phantomx_training/worlds/: terrain.world
