<package format="2">
  <name>phantomx</name>
  <version>1.0.0</version>
  <description> URDF Description package for phantomx_robot </description>
  <author>NicoRomero</author>
  <maintainer email="nico.romerocuruchet@gmail.com" />
  <license>MIT</license>
  <buildtool_depend>catkin</buildtool_depend>
  <depend>roslaunch</depend>
  <depend>robot_state_publisher</depend>
  <depend>rviz</depend>
  <depend>joint_state_publisher_gui</depend>
  <depend>gazebo</depend>
   <depend>gazebo_ros</depend>
  <export>
    <architecture_independent />
    <gazebo_ros gazebo_model_path="${prefix}/models"/>
    <gazebo_ros gazebo_media_path="${prefix}/worlds"/>
  </export>
</package>
