<?xml version="1.0"?>
<package format="2">
  <name>phantomx_description</name>
  <version>1.0.0</version>
  <description>The phantomx_description package</description>

  <maintainer email="nico.romerocuruchet@gmail.com">phantomx</maintainer>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

</package>
