<?xml version="1.0"?>
<package format="2">
  <name>phantomx_training</name>
  <version>1.0.0</version>
  <description>The phantomx_training package</description>

  <maintainer email="nico.romerocuruchet@gmail.com">phantomx</maintainer>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roslaunch</depend>
  <depend>robot_state_publisher</depend>
  <depend>rviz</depend>
  <depend>joint_state_publisher_gui</depend>
  <depend>gazebo</depend>
  <depend>gazebo_ros</depend>

  <export>
    <architecture_independent />
    <gazebo_ros gazebo_model_path="${prefix}/models"/>
    <gazebo_ros gazebo_media_path="${prefix}/worlds"/>
  </export>

</package>
